# eww-batteries-rs

./: Cargo.toml
src/: bat.rs  cli.rs  main.rs  serializable.rs
