[package]
name = "eww-batteries-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
battery = "0.7.8"
clap = { version = "4.5.54", features = ["derive"] }
# clap = "4.5.54"
color-eyre = "0.6.5"
humantime = "2.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.release]
lto = true
opt-level = 3
incremental = false
